exports[`DateTime has correct default options 1`] = `
<div
  className="grommetux-date-time">
  <input
    className="grommetux-input grommetux-date-time__input"
    onChange={[Function bound _onInputChange]}
    placeholder="M/D/YYYY h:mm a"
    value="4/7/2015 10:00 am" />
  <button
    aria-label="Date Time Icon"
    className="grommetux-button grommetux-button--plain grommetux-button--icon grommetux-date-time__control"
    disabled={false}
    href={undefined}
    id={undefined}
    onBlur={[Function onBlur]}
    onClick={[Function bound _onControlClick]}
    onFocus={[Function onFocus]}
    onMouseDown={[Function onMouseDown]}
    onMouseUp={[Function onMouseUp]}
    type="button">
    <span
      className="grommetux-button__icon">
      <svg
        aria-label="clock"
        className="grommetux-control-icon grommetux-control-icon-clock grommetux-control-icon--responsive"
        height="24px"
        role="img"
        version="1.1"
        viewBox="0 0 24 24"
        width="24px">
        <g>
          <rect
            fill="none"
            height="24"
            width="24" />
          <path
            d="M17,18 L12,13 L12,4 M12,23 C18.0751,23 23,18.0751 23,12 C23,5.9249 18.0751,1 12,1 C7.5627,1 1,4 1,12 C1,18.0751 5.9249,23 12,23 Z"
            fill="none"
            stroke="#000000"
            strokeWidth="2" />
        </g>
      </svg>
    </span>
  </button>
</div>
`;

exports[`DateTime transfers arbitrary props 1`] = `
<div
  className="grommetux-date-time">
  <input
    className="grommetux-input grommetux-date-time__input"
    data-flavor="coconut"
    onChange={[Function bound _onInputChange]}
    placeholder="M/D/YYYY h:mm a"
    value="4/7/2015 10:00 am" />
  <button
    aria-label="Date Time Icon"
    className="grommetux-button grommetux-button--plain grommetux-button--icon grommetux-date-time__control"
    disabled={false}
    href={undefined}
    id={undefined}
    onBlur={[Function onBlur]}
    onClick={[Function bound _onControlClick]}
    onFocus={[Function onFocus]}
    onMouseDown={[Function onMouseDown]}
    onMouseUp={[Function onMouseUp]}
    type="button">
    <span
      className="grommetux-button__icon">
      <svg
        aria-label="clock"
        className="grommetux-control-icon grommetux-control-icon-clock grommetux-control-icon--responsive"
        height="24px"
        role="img"
        version="1.1"
        viewBox="0 0 24 24"
        width="24px">
        <g>
          <rect
            fill="none"
            height="24"
            width="24" />
          <path
            d="M17,18 L12,13 L12,4 M12,23 C18.0751,23 23,18.0751 23,12 C23,5.9249 18.0751,1 12,1 C7.5627,1 1,4 1,12 C1,18.0751 5.9249,23 12,23 Z"
            fill="none"
            stroke="#000000"
            strokeWidth="2" />
        </g>
      </svg>
    </span>
  </button>
</div>
`;
